# YOLOv7_Logo_Detection

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg
data/Label_Studio_Output_1/: result.json
data/Label_Studio_Output_1/yolo_annotations/: 08e57e92-petronas_6.txt  15080aa8-petronas_47.txt  15e80cfb-petronas_9.txt  1958659d-petronas_21.txt  21e5f97d-petronas_46.txt  2706cc90-petronas_29.txt  37207afc-petronas_41.txt  39edd9d6-petronas_38.txt  445930a7-petronas_32.txt  4af77a12-petronas_20.txt  5670c077-petronas_28.txt  57866930-petronas_16.txt  709e3367-petronas_27.txt  7fd53a3f-petronas_44.txt  8e17f405-petronas_5.txt  a55a746f-petronas_4.txt  a59290a9-petronas_48.txt  b1b4b555-petronas_36.txt  b773af00-petronas_11.txt  bedf366c-petronas_26.txt  dfe5bb68-petronas_24.txt  e9003aa3-petronas_7.txt  eb0dd3d7-petronas_17.txt  f8b3e490-petronas_33.txt
data/Label_Studio_Output_2/: result.json
data/Label_Studio_Output_2/yolo_annotations/: 04292077-petronas_39.txt  05c9e135-petronas_27.txt  11be5f7d-petronas_15.txt  16125669-petronas_13.txt  2b9153e8-petronas_50.txt  47023e53-petronas_12.txt  51009a9c-petronas_47.txt  58aa04b4-petronas_6.txt  5903da1b-petronas_44.txt  5a8516f0-petronas_16.txt  5b20cabd-petronas_49.txt  689d61eb-petronas_34.txt  71e62d4c-petronas_36.txt  76a94ec6-petronas_28.txt  7c26f5b1-petronas_43.txt  7e836ecf-petronas_22.txt  810f83bc-petronas_45.txt  9a8b0dd1-petronas_48.txt  a043b41a-petronas_7.txt  b0e06874-petronas_18.txt  b33908a3-petronas_33.txt  bb4d86ff-petronas_5.txt  (+7 more)
yolov7/: requirements.txt
yolov7/data/: petronas_logo.yaml
(+56 files in other folders)
