[metadata]
name = YOLOv7_LOGO_DETECTION
version = 0.1.0
description = "Repository showing an example of how to train a YOLOv7 model to detect logo detection in images"
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
package_dir =
    =src
packages = find:
python_requires = >=3.10
setup_requires =
    setuptools_scm
install_requires =
    ipykernel == 6.13.1
    pandas == 1.4.4
    numpy == 1.23.3
    scikit-learn == 1.1.2
    pillow == 9.2.0
    opencv-python == 4.6.0.66
    matplotlib == 3.6.1

[options.packages.find]
where = src